# Templates

./: LICENSE  README.md
multipage-auth-dash-app/: .gitignore  README.md  pyproject.toml
multipage-auth-dash-app/src/: app.env  config.py  dash_app.py  main.py
multipage-auth-dash-app/src/auth/: __init__.py  authentication.py  authentication_proxy.py  infrastructure.py
multipage-auth-dash-app/src/callbacks/: layout_callbacks.py
multipage-auth-dash-app/src/callbacks/app/: review_images_callbacks.py  select_images_callbacks.py
multipage-auth-dash-app/src/callbacks/auth/: __init__.py  login_callbacks.py  registration_callbacks.py
multipage-auth-dash-app/src/file_io/: file_utilities.py  file_utilities_proxy.py
multipage-auth-dash-app/src/pages/: layout.py
multipage-auth-dash-app/src/pages/app/: review_images.py  select_images.py
multipage-auth-dash-app/src/pages/auth/: login.py  registration.py
multipage-auth-dash-app/tests/: __init__.py  test_helpers.py
multipage-auth-dash-app/tests/auth/: __init__.py  test_authentication_integration.py
multipage-auth-dash-app/tests/callbacks/: conftest.py  test_layout_callbacks.py
multipage-auth-dash-app/tests/callbacks/app/: test_review_images_callbacks.py  test_select_images_callbacks.py
multipage-auth-dash-app/tests/callbacks/auth/: test_login_callbacks.py  test_registration_callbacks.py
multipage-auth-dash-app/tests/dash_app/: test_dash_app.py
multipage-auth-dash-app/tests/file_io/: __init__.py  test_file_utilities.py
